# Hybrid-RAG-system

./: .env  .env.example  API_GUIDE.md  ARCHITECTURE.md  GRAPH_DATABASE_COMPARISON.md  NEO4J_SETUP.md  NEO4J_SUMMARY.txt  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  TECHNICAL_GUIDE.md  main.py  pyproject.toml  requirements.txt  start.sh  test_api.py
data/embeddings/: google_embeddings.py  openai_embeddings.py
src/: auth.py  config.py  database.py  embeddings.py  models.py  schemas.py
src/api/: auth.py  documents.py  graph.py  query.py
src/graphdb/: neo4j_service.py
src/services/: document_processor.py  graph_rag.py  rag_service.py
src/vectorstore/: qdrant.py
