[project]
name = "graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "filetype>=1.2.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pymupdf>=1.26.5",
    "qdrant-client>=1.15.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "neo4j>=5.14.0",
    "reportlab>=4.0.0",
]
